# verbaliser

./: .gitignore  .package.xml.swp  .setup.py.swp  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
new_tmule/: chat.tmule.yaml  robonav.tmule.yaml
verbalise/: audio_collector.py  openai_chat.py
verbaliser/: .openai_chat.py.swp  .speaker.py.swp  audio_collector.py  openai_chat.py  openai_robotnav.py  pocketsphinx_stt.py  speaker.py  triggers.py
verbaliser/dialogue_methods/: openai_chat.py  pocketsphinx_stt.py
verbaliser/input_methods/: audio_collector.py
verbaliser/output_methods/: elevenlabs_speaker.py  output_test.py  speaker.py
