<?xml version="1.0"?>
<package format="2">
  <name>verbaliser</name>
  <version>0.0.1</version>
  <description>The verbaliser package</description>

  <maintainer email="primordia@live.com">james</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>

  <depend>espeak</depend>

  <depend>python3-pyaudio</depend>
  <depend>python3-openai-pip</depend>
  <depend>python3-sounddevice-pip</depend>
  <depend>python-speechrecognition-pip</depend>

  <export>
  </export>
</package>
